[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Difficulty.gd" type="Script" id=1]
[ext_resource path="res://Extra assets/its-boshy-time.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Extra assets/creepy-dark-evil-horror-wallpaper-preview.jpg" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 510.683, 300.33 )
scale = Vector2( 1.41845, 1.51058 )
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 414.0
margin_top = 275.0
margin_right = 508.0
margin_bottom = 435.0
rect_scale = Vector2( 2, 2 )

[node name="Easy" type="Button" parent="VBoxContainer"]
margin_right = 94.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 6 )
text = "Easy"
flat = true

[node name="Medium" type="Button" parent="VBoxContainer"]
margin_top = 23.0
margin_right = 94.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 7 )
text = "Medium"
flat = true

[node name="Hard" type="Button" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 94.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 8 )
text = "Hard"
flat = true

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 94.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 9 )
text = "Back"
flat = true

[node name="Label" type="Label" parent="."]
margin_left = 225.0
margin_top = 67.0
margin_right = 350.0
margin_bottom = 81.0
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 5 )
text = "Choose difficulty"

[connection signal="pressed" from="VBoxContainer/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="VBoxContainer/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="VBoxContainer/Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
